--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@lottiefiles/dotlottie-react": "^0.13.0",
     "@mediapipe/camera_utils": "^0.3.1675466862",
     "@mediapipe/face_mesh": "^0.4.1633559619",
+    "axios": "^1.7.9",
     "react": "^19.0.0",
+    "react-bootstrap": "^2.10.9",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.1.5",
     "react-webcam": "^7.2.0"
